[package]
name = "ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
sqlite = "0.31.0"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
rs-snowflake = "0.6.0"
actix-cors = "0.6.4"
